--- a/app/blog/contents/simple-blog-using-nextjs14-markdown.mdx
+++ b/app/blog/contents/simple-blog-using-nextjs14-markdown.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Simple Blog using Nextjs 14 & Markdown"
 publishedAt: "2024-07-04"
-summary: "How to build fully functional blog using Nextjs 14 and Markdown" 
+summary: "How to build a fully functional blog using Nextjs 14 and Markdown" 
+category: "react"
 ---
 
 Nextjs 14 is a powerful framework and when combined with Markdown it works wonders to create a blog.
