--- a/app/blog/contents/react-19.mdx
+++ b/app/blog/contents/react-19.mdx
@@ -107,7 +107,7 @@ function ChangeName({ name, setName }) {
       redirect("/path");
       return null;
     },
-    null
+    null,
   );
 
   return (
@@ -141,7 +141,7 @@ const [error, submitAction, isPending] = useActionState(
     // handle success
     return null;
   },
-  null
+  null,
 );
 ```
 
