--- a/app/blog/contents/simple-blog-using-nextjs14-markdown.mdx
+++ b/app/blog/contents/simple-blog-using-nextjs14-markdown.mdx
@@ -10,3 +10,7 @@ Nextjs 14 is a powerful framework and when combined with Markdown it works wonde
 ```jsx
 console.log("Nextjs 14 & Markdown");
 ```
+
+## Ken Mwangi
+
+![](../../../me.jpg)
